--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./1-gallery.html">
+    <link rel="stylesheet" href="./2-form.html"> -->
   </head>
   <body>
-    <load ="partials/header.html" />
+    <a href="./1-gallery.html">Gallery</a>
+    <!-- <a href="./2-form.html"><Form></Form></a> -->
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <a href="./2-form.html">Form</a>
+    
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    
   </body>
 </html>
