--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/1-gallery.css">
     <title>Page 2</title>
   </head>
   <body>
@@ -11,6 +12,7 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page "Gallery"</h1>
     </section>
+    <ul class="gallery"></ul>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
